Fixed scrollbars

--- a/src/_components.scss
+++ b/src/_components.scss
@@ -471,10 +471,6 @@ app-root {
   cursor: pointer !important;
 }
 
-.NgxEditor__Placeholder {
-  visibility: hidden;
-}
-
 /* Tooltip */
 .tooltip {
   position: relative;
