--- a/src/app/components/proposals/proposal-creation/proposal-creation.component.scss
+++ b/src/app/components/proposals/proposal-creation/proposal-creation.component.scss
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  padding-left: 30px;
+}
+
+.dialog-title {
+  padding: 0px 30px 0px 30px;
 }
 
 h2 {
@@ -26,32 +31,46 @@ h3 {
   flex-shrink: 1;
   height: 1px;
   width: 100%;
-  gap: 50px;
+  gap: 20px;
 }
 
-.dialog-main-content {
+.main-content-scrollable-container {
+  overflow-y: scroll;
+  margin-right: 7px;
+  padding: 0px 15px 10px 0px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  height: calc(100% - 10px);
+}
+
+.side-panel-scrollable-container {
+  overflow-y: scroll;
+  margin-right: 7px;
+  padding: 0px 15px 30px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  height: calc(100% - 30px);
+}
+
+.fade-fix {
+  right: 15px;
+}
+
+.dialog-main-content {
+  position: relative;
   flex-grow: 1;
   flex-shrink: 1;
   height: 100%;
 }
 
 .dialog-side-panel {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 0;
-  flex-shrink: 0;
+  position: relative;
   height: 100%;
   width: 280px;
-  gap: 40px;
-}
-
-.categories {
-  flex-grow: 1 !important;
-  flex-shrink: 1 !important;
-  height: 1px !important;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .upload-action {
@@ -89,12 +108,18 @@ h3 {
   gap: 20px;
 }
 
+.categories-container {
+  padding-right: 7px;
+}
+
 .categories-list {
-  height: 243px;
+  max-height: 250px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: baseline;
   gap: 14px;
+  overflow-y: scroll;
 }
 
 .editor-menu {
